server common library code cleanup - replace deprecated calls, etc (#2299)
Signed-off-by: Henry Avetisyan <hga@yahooinc.com>
Co-authored-by: Henry Avetisyan <hga@yahooinc.com>